--- a/package.json
+++ b/package.json
@@ -10,17 +10,24 @@
   "keywords": [],
   "author": "",
   "license": "ISC",
-  "type": "commonjs",
+  "type": "module",
   "description": "",
   "devDependencies": {
+    "@types/compression": "^1.8.1",
+    "@types/express": "^5.0.6",
+    "@types/morgan": "^1.9.10",
     "@types/node": "^24.9.1",
     "compression": "^1.8.1",
     "helmet": "^8.1.0",
     "morgan": "^1.10.1",
+    "prisma": "^7.2.0",
     "ts-node": "^10.9.2",
+    "tsx": "^4.21.0",
     "typescript": "^5.9.3"
   },
   "dependencies": {
+    "@prisma/adapter-mariadb": "^7.2.0",
+    "@prisma/client": "^7.2.0",
     "accesscontrol": "^2.2.1",
     "bcrypt": "^6.0.0",
     "cloudinary": "^2.8.0",
