--- a/package.json
+++ b/package.json
@@ -13,14 +13,19 @@
   "type": "commonjs",
   "description": "",
   "devDependencies": {
-    "@types/node": "^24.9.1",
+    "@types/compression": "^1.8.1",
+    "@types/express": "^5.0.6",
+    "@types/morgan": "^1.9.10",
+    "@types/node": "^24.10.9",
     "compression": "^1.8.1",
     "helmet": "^8.1.0",
     "morgan": "^1.10.1",
+    "prisma": "^5.22.0",
     "ts-node": "^10.9.2",
     "typescript": "^5.9.3"
   },
   "dependencies": {
+    "@prisma/client": "^5.22.0",
     "accesscontrol": "^2.2.1",
     "bcrypt": "^6.0.0",
     "cloudinary": "^2.8.0",
