--- a/tsconfig.json
+++ b/tsconfig.json
@@ -32,6 +32,8 @@
     // "noFallthroughCasesInSwitch": true,
     // "noPropertyAccessFromIndexSignature": true,
 
+    "esModuleInterop": true,
+
     // Recommended Options
     "strict": true,
     "jsx": "react-jsx",
