--- a/package.json
+++ b/package.json
@@ -4,8 +4,8 @@
   "main": "index.js",
   "scripts": {
     "build": "tsc",
-    "start": "node dist/app.js",
-    "dev": "ts-node src/app.ts"
+    "start": "node dist/server.js",
+    "dev": "tsx server.ts"
   },
   "keywords": [],
   "author": "",
@@ -13,9 +13,14 @@
   "type": "module",
   "description": "",
   "devDependencies": {
+    "@types/bcrypt": "^6.0.0",
     "@types/compression": "^1.8.1",
+    "@types/cookie-parser": "^1.4.10",
     "@types/express": "^5.0.6",
+    "@types/jsonwebtoken": "^9.0.10",
+    "@types/lodash": "^4.17.23",
     "@types/morgan": "^1.9.10",
+    "@types/ms": "^2.1.0",
     "@types/node": "^24.9.1",
     "compression": "^1.8.1",
     "helmet": "^8.1.0",
@@ -31,12 +36,16 @@
     "accesscontrol": "^2.2.1",
     "bcrypt": "^6.0.0",
     "cloudinary": "^2.8.0",
+    "cookie-parser": "^1.4.7",
     "crypto": "^1.0.1",
     "dotenv": "^17.2.3",
     "express": "^5.1.0",
+    "http-status-codes": "^2.3.0",
     "ioredis": "^5.8.2",
+    "joi": "^18.0.2",
     "jsonwebtoken": "^9.0.2",
     "lodash": "^4.17.21",
+    "ms": "^2.1.3",
     "multer": "^2.0.2",
     "mysql2": "^3.15.3",
     "nodemailer": "^7.0.10",
