--- a/package.json
+++ b/package.json
@@ -31,6 +31,7 @@
     "typescript": "^5.9.3"
   },
   "dependencies": {
+    "@getbrevo/brevo": "^3.0.1",
     "@prisma/adapter-mariadb": "^7.2.0",
     "@prisma/client": "^7.2.0",
     "accesscontrol": "^2.2.1",
@@ -45,11 +46,13 @@
     "joi": "^18.0.2",
     "jsonwebtoken": "^9.0.2",
     "lodash": "^4.17.21",
+    "mailersend": "^2.6.0",
     "ms": "^2.1.3",
     "multer": "^2.0.2",
     "mysql2": "^3.15.3",
     "nodemailer": "^7.0.10",
     "redis": "^5.9.0",
+    "resend": "^6.8.0",
     "slugify": "^1.6.6",
     "uuid": "^13.0.0",
     "winston": "^3.18.3",
