--- a/package.json
+++ b/package.json
@@ -41,6 +41,7 @@
     "crypto": "^1.0.1",
     "dotenv": "^17.2.3",
     "express": "^5.1.0",
+    "google-auth-library": "^10.5.0",
     "http-status-codes": "^2.3.0",
     "ioredis": "^5.8.2",
     "joi": "^18.0.2",
