--- a/package.json
+++ b/package.json
@@ -21,7 +21,9 @@
     "@types/lodash": "^4.17.23",
     "@types/morgan": "^1.9.10",
     "@types/ms": "^2.1.0",
+    "@types/multer": "^2.0.0",
     "@types/node": "^24.10.9",
+    "@types/streamifier": "^0.1.2",
     "compression": "^1.8.1",
     "helmet": "^8.1.0",
     "morgan": "^1.10.1",
@@ -55,6 +57,7 @@
     "redis": "^5.9.0",
     "resend": "^6.8.0",
     "slugify": "^1.6.6",
+    "streamifier": "^0.1.1",
     "uuid": "^13.0.0",
     "winston": "^3.18.3",
     "winston-daily-rotate-file": "^5.0.0"
