--- a/package.json
+++ b/package.json
@@ -57,6 +57,7 @@
     "redis": "^5.9.0",
     "resend": "^6.8.0",
     "slugify": "^1.6.6",
+    "socket.io": "^4.8.3",
     "streamifier": "^0.1.1",
     "uuid": "^13.0.0",
     "winston": "^3.18.3",
