--- a/package.json
+++ b/package.json
@@ -13,6 +13,7 @@
   "type": "module",
   "description": "",
   "devDependencies": {
+    "@types/amqplib": "^0.10.8",
     "@types/bcrypt": "^6.0.0",
     "@types/compression": "^1.8.1",
     "@types/cookie-parser": "^1.4.10",
@@ -37,6 +38,7 @@
     "@prisma/adapter-mariadb": "^7.2.0",
     "@prisma/client": "^7.2.0",
     "accesscontrol": "^2.2.1",
+    "amqplib": "^0.10.9",
     "bcrypt": "^6.0.0",
     "cloudinary": "^2.8.0",
     "cookie-parser": "^1.4.7",
